@@ -2,10 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Aug 2014; Joseph Jon Booker <joe@neoturbine.net> astropy-9999.ebuild:
+  dev-python/astropy: Update astropy live ebuild deps and python support
+
   06 Jan 2014; Justin Lecher <jlec@gentoo.org> astropy-9999.ebuild:
   Switch from git-2 to git-r3
 
   13 Jun 2013; Justin Lecher <jlec@gentoo.org> astropy-9999.ebuild,
   metadata.xml:
   Bump to EAPI=5 and distutils-r1.eclass
-
